; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_playloop.c_mp_wait_events.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_playloop.c_mp_wait_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i64, i32 }

@.str = private unnamed_addr constant [12 x i8] c"start sleep\00", align 1
@INFINITY = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c"end sleep\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_wait_events(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  %3 = alloca i32, align 4
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  %4 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %5 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp sgt i64 %6, 0
  %8 = zext i1 %7 to i32
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %13 = call i32 @MP_STATS(%struct.MPContext* %12, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %11, %1
  %15 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %16 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %19 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @mp_dispatch_queue_process(i32 %17, i64 %20)
  %22 = load i64, i64* @INFINITY, align 8
  %23 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %24 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %23, i32 0, i32 0
  store i64 %22, i64* %24, align 8
  %25 = load i32, i32* %3, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %14
  %28 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %29 = call i32 @MP_STATS(%struct.MPContext* %28, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  br label %30

30:                                               ; preds = %27, %14
  ret void
}

declare dso_local i32 @MP_STATS(%struct.MPContext*, i8*) #1

declare dso_local i32 @mp_dispatch_queue_process(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
